2006-02-07 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Delete clear.gif and remove references in class.mod_web_dmail.php
	* Update to manual
	* Add userTable field in Module configuration function

2006-02-07  Thorsten Kahler  <thorsten.kahler@dkd.de>
	* Wrap direct_mail boundaries in plaintextLib.inc using TS and the userFunc from container class

2006-02-06 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Delete file TODO.txt in folder doc.
	* Small update to the manual.
	* Add localization labels for import CSV list.
	* Add description to csv import (see bugtracker issue 2063).

2006-02-05 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Updates to manual.
	* Add enable_jump_url parameter in Page TSConfig module configuration settings.
	* Move t3lib_TStemplate instantiation to module initialization.

2006-02-03 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Debug dmailer boundaries.
	* Debug retrieval of recipient categories.
	* dmailer cron initialization was missing load of ext_tables.

2006-02-02  Thorsten Kahler  <thorsten.kahler@dkd.de>
	* Check page permissions before writing page TS configuration
	* Don't override permissions of BE user in mod_web_dmail

2006-02-03 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Initial draft of categories conversion.

2006-02-02 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Small update to manual.
	* Add getRecursiveSelect function in class mod_web_dmail.

2006-02-02  Thorsten Kahler  <thorsten.kahler@dkd.de>
	* Include TS setup (for dmailer boundaries) optionally

2006-02-01  Thorsten Kahler  <thorsten.kahler@dkd.de>
	* Corrected misspelled and not initialized variables

2006-02-01 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Correction to emails sent by cron task to admin.
	* Add file locking to dmailer cron script so that the dmailer cron never runs twice (bugtracker issue 2461).